Se añadio el codigo correspondiente a la logica de la app TODO

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         }
 
         span {
-            color: #f5f58d;
+            color: #ffcc00;
             /* Amarillo pastel */
         }
 
@@ -38,7 +38,7 @@
         }
 
         button {
-            background-color: #f5f58d;
+            background-color: #ffcc00;
             /* amarillo */
             color: #000;
             border: none;
@@ -57,7 +57,7 @@
 
     <script>
         document.getElementById('todoAppBtn').addEventListener('click', function () {
-            window.location.href = 'https://github.com/sanchxyz';
+            window.location.href = '/todo/';
         });
     </script>
 </body>
